--- a/localizator/package.json
+++ b/localizator/package.json
@@ -23,10 +23,12 @@
     "@angular/platform-browser-dynamic": "^7.0.3",
     "@angular/router": "^7.0.3",
     "@stomp/ng2-stompjs": "^7.0.0-beta.3",
+    "amazing-time-picker": "^1.8.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
+    "ngx-material-timepicker": "^2.8.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
