--- a/localizator/package.json
+++ b/localizator/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,6 +30,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ngx-material-timepicker": "^2.8.3",
+    "ngx-perfect-scrollbar": "^7.0.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
