--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/buslocalizator
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jackson.serialization.write-dates-as-timestamps=false
