--- a/localizator/package.json
+++ b/localizator/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --open --port",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,42 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.0",
-    "@angular/cdk": "^7.1.0",
-    "@angular/common": "^7.1.0",
-    "@angular/compiler": "^7.1.0",
-    "@angular/core": "^7.1.0",
-    "@angular/forms": "^7.1.0",
-    "@angular/http": "^7.1.0",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "^7.1.0",
-    "@angular/platform-browser-dynamic": "^7.1.0",
-    "@angular/router": "^7.1.0",
-    "@stomp/ng2-stompjs": "^7.0.0",
+    "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.1",
+    "@angular/common": "^7.1.1",
+    "@angular/compiler": "^7.1.1",
+    "@angular/core": "^7.1.1",
+    "@angular/forms": "^7.1.1",
+    "@angular/http": "^7.1.1",
+    "@angular/material": "^7.1.1",
+    "@angular/platform-browser": "^7.1.1",
+    "@angular/platform-browser-dynamic": "^7.1.1",
+    "@angular/router": "^7.1.1",
+    "@stomp/ng2-stompjs": "^7.0.1",
     "amazing-time-picker": "^1.8.0",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
-    "ngx-material-timepicker": "^2.8.4",
-    "ngx-perfect-scrollbar": "^7.0.0",
+    "ng2-charts": "^1.6.0",
+    "ngx-material-timepicker": "^2.10.0",
+    "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.6",
-    "@angular/cli": "^7.0.6",
-    "@angular/compiler-cli": "^7.1.0",
-    "@angular/language-service": "^7.1.0",
+    "@angular-devkit/build-angular": "^0.11.1",
+    "@angular/cli": "^7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
+    "@angular/language-service": "^7.1.1",
     "@fortawesome/fontawesome-free": "^5.4.2",
-    "@types/jasmine": "~3.3.0",
+    "@types/jasmine": "^3.3.1",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~10.12.10",
+    "@types/node": "^10.12.12",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
@@ -54,6 +56,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.3"
+    "typescript": "^3.1.6"
   }
 }
