--- a/localizator/package.json
+++ b/localizator/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --port",
+    "start": "ng serve --open --port=4300",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.1.1",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "^7.1.1",
@@ -31,6 +32,7 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ng2-charts": "^1.6.0",
+    "ngx-google-places-autocomplete": "^2.0.3",
     "ngx-material-timepicker": "^2.10.0",
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
@@ -42,6 +44,7 @@
     "@angular/compiler-cli": "^7.1.1",
     "@angular/language-service": "^7.1.1",
     "@fortawesome/fontawesome-free": "^5.4.2",
+    "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "^3.3.1",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.12.12",
