--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectreactor</groupId>
+            <artifactId>reactor-spring</artifactId>
+            <version>1.0.1.RELEASE</version>
+        </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
         <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -169,9 +178,9 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>redis.clients</groupId>-->
-            <!--<artifactId>jedis</artifactId>-->
-            <!--<type>jar</type>-->
+        <!--<groupId>redis.clients</groupId>-->
+        <!--<artifactId>jedis</artifactId>-->
+        <!--<type>jar</type>-->
         <!--</dependency>-->
     </dependencies>
 
@@ -182,39 +191,39 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>com.github.eirslett</groupId>-->
-                <!--<artifactId>frontend-maven-plugin</artifactId>-->
-                <!--<version>1.3</version>-->
-                <!--<configuration>-->
-                    <!--<nodeVersion>v8.12.0</nodeVersion>-->
-                    <!--<npmVersion>6.4.1</npmVersion>-->
-                    <!--<workingDirectory>localizator</workingDirectory>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>install node and npm</id>-->
-                        <!--<goals>-->
-                            <!--<goal>install-node-and-npm</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>npm install</id>-->
-                        <!--<goals>-->
-                            <!--<goal>npm</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>validate</phase>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>prod</id>-->
-                        <!--<goals>-->
-                            <!--<goal>npm</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<arguments>run-script build &#45;&#45;prod</arguments>-->
-                        <!--</configuration>-->
-                        <!--<phase>validate</phase>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<groupId>com.github.eirslett</groupId>-->
+            <!--<artifactId>frontend-maven-plugin</artifactId>-->
+            <!--<version>1.3</version>-->
+            <!--<configuration>-->
+            <!--<nodeVersion>v8.12.0</nodeVersion>-->
+            <!--<npmVersion>6.4.1</npmVersion>-->
+            <!--<workingDirectory>localizator</workingDirectory>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>install node and npm</id>-->
+            <!--<goals>-->
+            <!--<goal>install-node-and-npm</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>npm install</id>-->
+            <!--<goals>-->
+            <!--<goal>npm</goal>-->
+            <!--</goals>-->
+            <!--<phase>validate</phase>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>prod</id>-->
+            <!--<goals>-->
+            <!--<goal>npm</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<arguments>run-script build &#45;&#45;prod</arguments>-->
+            <!--</configuration>-->
+            <!--<phase>validate</phase>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
