--- a/localizator/package.json
+++ b/localizator/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "howler": "^2.1.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
     "ng2-charts": "^1.6.0",
