--- a/pom.xml
+++ b/pom.xml
@@ -187,43 +187,55 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/src/main/resources/static/</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>com.github.eirslett</groupId>-->
-                <!--<artifactId>frontend-maven-plugin</artifactId>-->
-                <!--<version>1.3</version>-->
-                <!--<configuration>-->
-                    <!--<nodeVersion>v10.14.1</nodeVersion>-->
-                    <!--<npmVersion>6.4.1</npmVersion>-->
-                    <!--<workingDirectory>localizator</workingDirectory>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>install node and npm</id>-->
-                        <!--<goals>-->
-                            <!--<goal>install-node-and-npm</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>npm install</id>-->
-                        <!--<goals>-->
-                            <!--<goal>npm</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>validate</phase>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>prod</id>-->
-                        <!--<goals>-->
-                            <!--<goal>npm</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<arguments>run-script build &#45;&#45;prod</arguments>-->
-                        <!--</configuration>-->
-                        <!--<phase>validate</phase>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<groupId>com.github.eirslett</groupId>-->
+            <!--<artifactId>frontend-maven-plugin</artifactId>-->
+            <!--<version>1.3</version>-->
+            <!--<configuration>-->
+            <!--<nodeVersion>v10.14.1</nodeVersion>-->
+            <!--<npmVersion>6.4.1</npmVersion>-->
+            <!--<workingDirectory>localizator</workingDirectory>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>install node and npm</id>-->
+            <!--<goals>-->
+            <!--<goal>install-node-and-npm</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>npm install</id>-->
+            <!--<goals>-->
+            <!--<goal>npm</goal>-->
+            <!--</goals>-->
+            <!--<phase>validate</phase>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>prod</id>-->
+            <!--<goals>-->
+            <!--<goal>npm</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<arguments>run-script build &#45;&#45;prod</arguments>-->
+            <!--</configuration>-->
+            <!--<phase>validate</phase>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
