--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
     <groupId>com.localizator</groupId>
     <artifactId>bus</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <version>1.0</version>
+    <packaging>jar</packaging>
 
     <name>bus</name>
     <description>Localizator Bus Proyect</description>
