--- a/localizator/package.json
+++ b/localizator/package.json
@@ -13,16 +13,16 @@
   "dependencies": {
     "@angular/animations": "^7.1.1",
     "@angular/cdk": "^7.2.0",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
     "@angular/forms": "^7.1.4",
     "@angular/http": "^7.1.4",
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/router": "^7.1.4",
-    "@stomp/ng2-stompjs": "^7.0.1",
+    "@stomp/ng2-stompjs": "^7.1.0-beta.1",
     "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
@@ -58,7 +58,7 @@
     "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "~5.12.0",
     "typescript": "^3.1.6"
   }
 }
