Add Devicesto Traccar

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,17 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>9.4.14.v20181114</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-client</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>redis.clients</groupId>-->
         <!--<artifactId>jedis</artifactId>-->
