--- a/localizator/package.json
+++ b/localizator/package.json
@@ -11,54 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.1",
-    "@angular/cdk": "^7.2.0",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/forms": "^7.1.4",
-    "@angular/http": "^7.1.4",
-    "@angular/material": "^7.2.0",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/router": "^7.1.4",
-    "@stomp/ng2-stompjs": "^7.1.0-beta.1",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "^7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "^7.2.0",
+    "@angular/http": "^7.2.0",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "^7.2.0",
+    "@angular/platform-browser-dynamic": "^7.2.0",
+    "@angular/router": "^7.2.0",
+    "@stomp/ng2-stompjs": "^7.1.0",
     "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.7.3",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "howler": "^2.1.0",
+    "howler": "^2.1.1",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.22.2",
+    "moment": "^2.23.0",
     "ng2-charts": "^1.6.0",
     "ngx-google-places-autocomplete": "^2.0.3",
-    "ngx-material-timepicker": "^2.10.0",
+    "ngx-material-timepicker": "^2.11.2",
     "ngx-perfect-scrollbar": "^7.1.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.1",
-    "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
-    "@angular/language-service": "^7.1.4",
-    "@fortawesome/fontawesome-free": "^5.4.2",
+    "@angular-devkit/build-angular": "^0.12.1",
+    "@angular/cli": "^7.2.1",
+    "@angular/compiler-cli": "^7.2.0",
+    "@angular/language-service": "^7.2.0",
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@types/googlemaps": "^3.30.16",
-    "@types/jasmine": "^3.3.1",
+    "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.12.12",
+    "@types/node": "^10.12.18",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.1.3",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "~5.4.0",
+    "protractor": "~5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.12.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.2"
   }
 }
