--- a/localizator/package.json
+++ b/localizator/package.json
@@ -4,48 +4,48 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open --port=4300",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.0",
-    "@angular/cdk": "^7.2.1",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "^7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "^7.2.0",
-    "@angular/http": "^7.2.0",
-    "@angular/material": "^7.2.1",
-    "@angular/platform-browser": "^7.2.0",
-    "@angular/platform-browser-dynamic": "^7.2.0",
-    "@angular/router": "^7.2.0",
-    "@stomp/ng2-stompjs": "^7.1.0",
+    "@angular/animations": "^7.2.1",
+    "@angular/cdk": "^7.2.2",
+    "@angular/common": "^7.2.1",
+    "@angular/compiler": "^7.2.1",
+    "@angular/core": "^7.2.1",
+    "@angular/forms": "^7.2.1",
+    "@angular/http": "^7.2.1",
+    "@angular/material": "^7.2.2",
+    "@angular/platform-browser": "^7.2.1",
+    "@angular/platform-browser-dynamic": "^7.2.1",
+    "@angular/router": "^7.2.1",
+    "@stomp/ng2-stompjs": "^7.2.0",
     "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.7.3",
-    "core-js": "^2.6.2",
+    "core-js": "^2.6.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "howler": "^2.1.1",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.23.0",
+    "moment": "^2.24.0",
     "ng2-charts": "^1.6.0",
     "ngx-google-places-autocomplete": "^2.0.3",
     "ngx-material-timepicker": "^2.11.2",
     "ngx-perfect-scrollbar": "^7.2.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.27"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "^7.2.1",
-    "@angular/compiler-cli": "^7.2.0",
-    "@angular/language-service": "^7.2.0",
+    "@angular-devkit/build-angular": "^0.12.2",
+    "@angular/cli": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.1",
+    "@angular/language-service": "^7.2.1",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@types/googlemaps": "^3.30.16",
-    "@types/jasmine": "^3.3.5",
+    "@types/jasmine": "^3.3.7",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.12.18",
     "codelyzer": "~4.5.0",
@@ -57,8 +57,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.3.1",
     "protractor": "~5.4.2",
-    "ts-node": "~7.0.0",
+    "ts-node": "~8.0.1",
     "tslint": "~5.12.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.4"
   }
 }
