--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <hibernate.version>5.4.0.Final</hibernate.version>
+        <hibernate.version>5.4.1.Final</hibernate.version>
         <thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>
         <jjwt.version>0.9.1</jjwt.version>
         <jackson.version>2.9.7</jackson.version>
@@ -207,52 +207,59 @@
                         </fileset>
                     </filesets>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>com.github.eirslett</groupId>-->
-            <!--<artifactId>frontend-maven-plugin</artifactId>-->
-            <!--<version>1.3</version>-->
-            <!--<configuration>-->
-            <!--<nodeVersion>v10.14.1</nodeVersion>-->
-            <!--<npmVersion>6.4.1</npmVersion>-->
-            <!--<workingDirectory>localizator</workingDirectory>-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>install node and npm</id>-->
-            <!--<goals>-->
-            <!--<goal>install-node-and-npm</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>npm install</id>-->
-            <!--<goals>-->
-            <!--<goal>npm</goal>-->
-            <!--</goals>-->
-            <!--<phase>validate</phase>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>prod</id>-->
-            <!--<goals>-->
-            <!--<goal>npm</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<arguments>run-script build &#45;&#45;prod</arguments>-->
-            <!--</configuration>-->
-            <!--<phase>validate</phase>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.3</version>
+                <configuration>
+                    <nodeVersion>v10.14.1</nodeVersion>
+                    <npmVersion>6.4.1</npmVersion>
+                    <workingDirectory>localizator</workingDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>npm run build</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>copy-resources</id>
-                        <phase>validate</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>copy-resources</goal>
                         </goals>
@@ -263,6 +270,30 @@
                                     <directory>${project.basedir}/localizator/dist/localizator/</directory>
                                 </resource>
                             </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.thymeleaf</groupId>
+                <artifactId>angular-resources</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <id>create-resource</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                        <configuration>
+                            <extensions>css,js</extensions>
+                            <inputFile>${project.basedir}/src/main/resources/static/index.html</inputFile>
+                            <outputFile>${project.basedir}/src/main/resources/templates/index.html</outputFile>
+                            <!--<resources>-->
+                            <!--<resource>-->
+                            <!--<directory>${project.basedir}/src/main/resources/static/</directory>-->
+                            <!--</resource>-->
+                            <!--</resources>-->
                         </configuration>
                     </execution>
                 </executions>
