--- a/localizator/package.json
+++ b/localizator/package.json
@@ -11,17 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.9",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^7.3.4",
-    "@angular/common": "^7.2.9",
-    "@angular/compiler": "^7.2.9",
-    "@angular/core": "^7.2.9",
-    "@angular/forms": "^7.2.9",
-    "@angular/http": "^7.2.9",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "^7.2.9",
-    "@angular/platform-browser-dynamic": "^7.2.9",
-    "@angular/router": "^7.2.9",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@stomp/ng2-stompjs": "^7.2.0",
     "amazing-time-picker": "^1.8.0",
     "chart.js": "^2.7.3",
@@ -35,20 +34,20 @@
     "ngx-google-places-autocomplete": "^2.0.3",
     "ngx-material-timepicker": "^2.11.2",
     "ngx-perfect-scrollbar": "^7.2.0",
-    "rxjs": "~6.4.0",
-    "zone.js": "~0.8.29"
+    "rxjs": "~6.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.2",
-    "@angular/cli": "^7.3.5",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/language-service": "^7.2.9",
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/cli": "^8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@types/googlemaps": "^3.30.16",
     "@types/jasmine": "^3.3.7",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^10.12.18",
-    "codelyzer": "~4.5.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.0.1",
@@ -59,6 +58,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.0.1",
     "tslint": "~5.12.1",
-    "typescript": "^3.2.4"
+    "typescript": "^3.5.3"
   }
 }
