--- a/localizator/package.json
+++ b/localizator/package.json
@@ -11,53 +11,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@stomp/ng2-stompjs": "^7.2.0",
-    "amazing-time-picker": "^1.8.0",
-    "chart.js": "^2.7.3",
-    "core-js": "^2.6.3",
+    "@angular/animations": "^12.1.5",
+    "@angular/cdk": "^12.1.4",
+    "@angular/common": "^12.1.5",
+    "@angular/compiler": "^12.1.5",
+    "@angular/core": "^12.1.5",
+    "@angular/forms": "^12.1.5",
+    "@angular/material": "^12.1.4",
+    "@angular/platform-browser": "^12.1.5",
+    "@angular/platform-browser-dynamic": "^12.1.5",
+    "@angular/router": "^12.1.5",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "chart.js": "3.5.0",
+    "core-js": "^3.16.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "howler": "^2.1.1",
+    "howler": "^2.2.3",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.24.0",
-    "ng2-charts": "^1.6.0",
-    "ngx-google-places-autocomplete": "^2.0.3",
-    "ngx-material-timepicker": "^2.11.2",
-    "ngx-perfect-scrollbar": "^7.2.0",
-    "rxjs": "~6.5.3",
-    "zone.js": "~0.9.1"
+    "moment": "^2.29.1",
+    "ng2-charts": "^2.4.3",
+    "ngx-google-places-autocomplete": "^2.0.5",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-perfect-scrollbar": "^10.1.1",
+    "rxjs": "^6.5.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "^8.3.19",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "^12.1.5",
+    "@angular/language-service": "^12.1.5",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@types/googlemaps": "^3.30.16",
-    "@types/jasmine": "^3.3.7",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^10.12.18",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.0.1",
-    "tslint": "~5.12.1",
-    "typescript": "^3.5.3"
+    "@types/jasmine": "^3.8.2",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^16.4.12",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.8.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.1.0",
+    "tslint": "~5.20.1",
+    "typescript": "^4.3.5"
   }
 }
